added publishing info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ternary"
 version = "0.1.0"
 edition = "2021"
+authors = ["Ozymandias <alayakiire@gmail.com>"]
+description = "A simple macro for C/C++ style ternary expressions in Rust."
+repository = "https://github.com/aquarius2019/ternary"
+homepage = "https://github.com/aquarius2019/ternary"
+documentation = "https://docs.rs/ternary"
 
 [lib]
 proc-macro = true
