--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ternary"
+name = "simple-ternary"
 version = "0.1.0"
 edition = "2021"
 authors = ["Ozymandias <alayakiire@gmail.com>"]
