--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-ternary"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 authors = ["Ozymandias <alayakiire@gmail.com>"]
 license = "MIT"
@@ -12,7 +12,11 @@ documentation = "https://docs.rs/simple-ternary"
 [lib]
 proc-macro = true
 
+[features]
+default = ["syn"]
+try = ["syn/full"]
+
 [dependencies]
 proc-macro2 = "1.0.93"
 quote = "1.0.38"
-syn = "2.0.96"
+syn = {version="2.0.96", optional = true}
