--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,7 @@ documentation = "https://docs.rs/simple-ternary"
 [lib]
 proc-macro = true
 
-[features]
-default = ["syn"]
-try = ["syn/full"]
-
 [dependencies]
 proc-macro2 = "1.0.93"
 quote = "1.0.38"
-syn = {version="2.0.96", optional = true}
+syn = {version="2.0.96", features = ["full"]}
